k8s/gitops/20-network/base/22-frontend/ingress/allow-ingress-to-frontend.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-to-frontend
  namespace: front
spec:
  endpointSelector:
    matchLabels:
      app: frontend

  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: nginx-ingress
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
